fixed footer and adjusted item page spacing

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ simple hover animations.
   Element Styles
 */
 
+/* Needed to always keep footer at the bottom of the page */
+html body {
+  height: 100%;
+  min-height: 100vh;
+}
+
 body {
   display: flex;
   background-color: beige;
@@ -25,6 +31,18 @@ body {
   margin: 0px;
   position: relative;
 }
+
+/* button {
+  background-color: #d45555;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
+  transition: background-color 0.3s;
+} */
 
 header {
   display: flex;
@@ -61,8 +79,7 @@ footer {
   width: 100%;
   height: 40px;
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 0px;
   margin-top: 100px;
   background-color: blanchedalmond;
 }
@@ -98,6 +115,13 @@ h3 {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.side-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 .footer-spacing {
@@ -197,19 +221,52 @@ h3 {
   box-sizing: border-box;
 }
 
-.side-column {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: row;
-}
-
 /* 
   ID Styles
 */
 
+#profile-btn {
+  background-image: url('img/profile.png');
+  padding-top: 2px;
+  padding-bottom: 2px;
+  width: 40px;
+}
+
+/* Home icons created by Dave Gandy - Flaticon: https://www.flaticon.com/free-icon/home_25694 */
+#logo-btn {
+  /* The icons from Flaticon are usually 512 x 512 pixels
+  The sizing works appropriately with these dimentions */
+  background-image: url('img/home.png');
+  background-size: 75%;
+}
+
+#cart-btn {
+  background-image: url('img/cart.png');
+}
+
+/* Contact us icons created by Uniconlabs - Flaticon: https://www.flaticon.com/free-icon/contact-us_7269995 */
+#contact-btn {
+  background-image: url('img/contact.png');
+  background-size: 75%;
+}
+
+/* Instagram logo icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/instagram_1384063?related_id=1384031&origin=search */
+#instagram-btn {
+  background-image: url('img/instagram.png');
+  background-size: 60%;
+}
+
+/* Phone icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/smartphone-call_15874?term=phone&page=1&position=8&origin=tag&related_id=15874 */
+/* Email icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/mail_646094?term=mail&page=1&position=3&origin=search&related_id=646094 */
+/* Location icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/location_535239?term=location&page=1&position=1&origin=search&related_id=535239 */
+#phone-icon, #mail-icon, #location-icon {
+  width: 5%;
+  padding: 10px;
+}
+
 #title-section {
   height: 93vh; /* must be the compliment of the header's height */
+  position: relative;
 }
 
 #title {
@@ -224,12 +281,11 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
-  color: black;
   width: 65%;
   height: auto;
+  color: black;
+  background-color: white;
   margin: auto;
-  margin-top: 300px;
   margin-bottom: 100px;
   padding: 75px;
   border-radius: 30px;
@@ -283,10 +339,6 @@ h3 {
   flex-direction: column;
 }
 
-#price-total {
-  padding: 50px;
-}
-
 #dessert-list {
   display: flex;
   align-items: center;
@@ -318,22 +370,38 @@ h3 {
 
 #item-details {
   background-color: beige;
-  margin-left: 100px;
-  margin-right: 100px;
+  /* width: 30vw; */
+  /* height: 50vh; */
   border-radius: 15px;
-  padding: 20px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px;
 }
 
-#gen-dessert{
+#item-details > div {
+  text-align: left;
+}
+
+#dessert-sample-img {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 75%;
-  max-height: 450px;
-  padding: 50px;
+  height: 60vh;
+  margin: 50px;
+  border: 5px solid whitesmoke;
+  box-shadow: 0 0 10px whitesmoke;
   border-radius: 75px;
+}
+
+#flavor-input, #quantity-input {
+  margin-right: 5%;
+}
+
+#customization-input {
+  height: 100px;
+  width: 350px;
+  margin-left: 11px;
+  text-align: left;
+  vertical-align: top;
+  box-sizing: border-box;
 }
 
 #item-order-btn {
@@ -372,64 +440,12 @@ h3 {
   cursor: pointer;
 }
 
-#customization-input {
-  height: 100px;
-  width: 350px;
-  margin-left: 11px;
-  text-align: left;
-  vertical-align: top;
-  box-sizing: border-box;
-}
-
-#quantity-label, #custom-label {
-  margin-left: 50px;
-}
-
 #price-total {
   background-color: beige;
 }
 
 #form-container, #login-form-container {
   border-radius: 5px;
-}
-
-#profile-btn {
-  background-image: url('img/profile.png');
-  padding-top: 2px;
-  padding-bottom: 2px;
-  width: 40px;
-}
-
-/* Home icons created by Dave Gandy - Flaticon: https://www.flaticon.com/free-icon/home_25694 */
-#logo-btn {
-  /* The icons from Flaticon are usually 512 x 512 pixels
-  The sizing works appropriately with these dimentions */
-  background-image: url('img/home.png');
-  background-size: 75%;
-}
-
-#cart-btn {
-  background-image: url('img/cart.png');
-}
-
-/* Contact us icons created by Uniconlabs - Flaticon: https://www.flaticon.com/free-icon/contact-us_7269995 */
-#contact-btn {
-  background-image: url('img/contact.png');
-  background-size: 75%;
-}
-
-/* Instagram logo icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/instagram_1384063?related_id=1384031&origin=search */
-#instagram-btn {
-  background-image: url('img/instagram.png');
-  background-size: 60%;
-}
-
-/* Phone icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/smartphone-call_15874?term=phone&page=1&position=8&origin=tag&related_id=15874 */
-/* Email icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/mail_646094?term=mail&page=1&position=3&origin=search&related_id=646094 */
-/* Location icons created by Freepik - Flaticon: https://www.flaticon.com/free-icon/location_535239?term=location&page=1&position=1&origin=search&related_id=535239 */
-#phone-icon, #mail-icon, #location-icon {
-  width: 5%;
-  padding: 10px;
 }
 
 #order-page {
